# visionweb

./: .gitignore  ANSB.md  ANS_Benchmark_Test_Plan.md  Cargo.toml  Dockerfile  V2_ROADMAP.md  agent-nervous-system.md  docker-compose.yml  fixes.md  websites.md
.cargo/: .crates.toml  .crates2.json  .global-cache
.claude/: .last-cleanup  .last-update-result.json  daemon.status.json  history.jsonl  mcp-needs-auth-cache.json  settings.json
.claude/.claude/: .last-cleanup  .last-update-result.json  history.jsonl  settings.json
.claude/.claude/backups/: .claude.json.backup.1781276584650  .claude.json.backup.1781276654638  .claude.json.backup.1781276899139  .claude.json.backup.1781277044744  .claude.json.backup.1781277345496  .claude.json.corrupted.1779821920805
.claude/.claude/daemon/: roster.json
.claude/.claude/paste-cache/: 0274e5b649547997.txt  2c5a171006d4e2d0.txt  5800e2f977a83b25.txt  592b4a86f00803ba.txt  7dcde47cbc17018a.txt  d69882f32d7ea331.txt
.claude/.claude/plans/: distributed-nibbling-simon.md  distributed-yawning-shamir.md
.claude/.claude/plugins/: .last_inuse_sweep  installed_plugins.json  known_marketplaces.json
.claude/.claude/shell-snapshots/: snapshot-bash-1780662945506-z08kpx.sh  snapshot-bash-1781276112561-44pqj7.sh
.claude/backups/: .claude.json.backup.1780765761184  .claude.json.backup.1780806955742  .claude.json.backup.1780810937354  .claude.json.backup.1780813073177  audit-status.json  desktop.ini  learning.json  swarm-activity.json  v3-progress.json
.claude/cache/: gateway-models.json
.claude/daemon/: pipe.key
.claude/debug/: bad08b6b-9006-4a4b-acea-88f62b909625.txt
.claude/file-history/13a826f6-8425-4736-961c-8836f660c858/: 023d14f74833b9d5@v2  02fc8768ea7b9a7b@v3  040ba57c1505cf6e@v2  040ba57c1505cf6e@v3  047f46ffd91bfbbe@v2  047f46ffd91bfbbe@v5  175d477005303d2f@v3  177be4bf9db37801@v2  177be4bf9db37801@v3  177be4bf9db37801@v4  1b73cd6f6937b982@v2  1ba07e6d303d1a50@v2  1cafddc32700cc82@v2  22b1718106c8b8b5@v2  22b1718106c8b8b5@v3  22b1718106c8b8b5@v4  265a1a7d926bcd9e@v2  2d4c6b29c700d578@v2  3176272778366400@v2  3760a05b8b439ed9@v2  3760a05b8b439ed9@v3  3a546c67a6e497a4@v4  3af70e31a4904418@v5  3e3ea3dc24212900@v2  3e3ea3dc24212900@v4  3ec9b66b541eb518@v2  3ec9b66b541eb518@v3  3ec9b66b541eb518@v4  3ed29dbf3bec7f86@v2  3f7b874241778231@v2  40f44336bbe9ad59@v2  40f44336bbe9ad59@v3  40f44336bbe9ad59@v4  4d2d62925cfebde1@v2  4d2d62925cfebde1@v3  4d2d62925cfebde1@v4  4d2d62925cfebde1@v6  5037c0fb7ba3c7e6@v2  5dcd4ad59a439c36@v2  5dce855b73ea1fb8@v2  (+64 more)
.claude/file-history/2e602ed9-d407-409d-8c87-2f75cf704862/: 2fdfa0aeb19140dd@v2  98530af512e1169b@v1  9cc134f311fb31c9@v2
.claude/file-history/33a1bda0-339e-486c-8f29-3077fc3b37dd/: 179ce1a0d435d072@v3  179ce1a0d435d072@v4  1f2a85c0bf06989a@v2  2d4c6b29c700d578@v2  303ff1aa8ca3dd7f@v1  3afbb4afee746b68@v3  3afbb4afee746b68@v4  489186242526018d@v4  489186242526018d@v5  572d145d3b06ec4e@v2  572d145d3b06ec4e@v3  bf43e6458de6aedb@v2  c452f7f6cdb9b71b@v2  caa7bee266434b4b@v1  caa7bee266434b4b@v6  ecfb6366164e7b28@v1  f668c8621879abbb@v1  f668c8621879abbb@v2
.claude/file-history/3871a5cf-e658-4fce-9009-d6c8eb3c461f/: 6053080fd21c83bb@v2  abadd35eef691bc8@v1  d12be6d37140344c@v2
.claude/file-history/3acf5580-4d8c-4c99-b4bb-62ed0b0689e8/: 000ced35536b51b0@v2  1bec2029b5e80dc2@v1  1bec2029b5e80dc2@v3  205a7fc57d3be563@v2  28f203db07f37164@v1  29628b024ce52c06@v1  29628b024ce52c06@v2  2c25f7d3846e3536@v1  3e3de904e4ae6c0a@v2  4cecf21a1f47a4f9@v1  57a36874367f8d21@v1  80531ef903c574e5@v1  82823a74707770d2@v1  82823a74707770d2@v2  86ace14a46663740@v2  9308143845db5832@v1  9308143845db5832@v2  9885e4912b6b16b8@v1  9885e4912b6b16b8@v2  9e394e7fb2b26f7e@v1  ca9ca2f87aae4a92@v1
.claude/file-history/5d717524-6e7c-413b-b5ce-0144db49d4b7/: 04c7752650bd96f3@v2  05d8a220e5e1daac@v2  085bd8045c53db76@v2  1ba07e6d303d1a50@v2  1ba07e6d303d1a50@v3  1f2a85c0bf06989a@v2  26f49f81463c44d4@v1  28ce2c127ce53d92@v3  3ac4d463b77df952@v2  3afbb4afee746b68@v2  3afbb4afee746b68@v5  572d145d3b06ec4e@v3  5852229d21197cda@v2  5852229d21197cda@v3  5b2b71d7f5a6c50f@v2  610555bdc619471d@v2  6bad2e9675bcfcba@v2  6bad2e9675bcfcba@v3  6f686b6d9566391c@v2  8d7bdc2304cc4677@v1  8d7bdc2304cc4677@v2  8fae1f11f12a391d@v2  966364871df6e65a@v2  9d46f3b62d593f9b@v2  a66cc3d2eb81eae0@v3  af5149bdd918b832@v2  c452f7f6cdb9b71b@v2  c452f7f6cdb9b71b@v3  caa7bee266434b4b@v3  cf0604fdbb025c0f@v2  d14c63fee5c1e41c@v3  d14c63fee5c1e41c@v4  d4f49a885becb879@v2  d4f49a885becb879@v3  df4f639d153934d8@v2  e41f9ae55e97a2e9@v2  e9d681a5f60655c4@v2  e9f02daeb492d6d9@v2  e9f02daeb492d6d9@v3  e9f02daeb492d6d9@v5  (+6 more)
.claude/helpers/: statusline.cjs
.claude/paste-cache/: 347c11a1e378a238.txt  377ec3cf25df520b.txt  3a078e10466498b0.txt  5af2b50288ae729c.txt  74dd241a2e6127c8.txt  c0bb809c2e11b0f4.txt  e06770d70b8caf59.txt  e8aedb6cfd8a7b70.txt
.claude/plans/: cheerful-noodling-dusk.md  melodic-dreaming-hearth.md  rippling-whistling-cocoa.md
.claude/plugins/: blocklist.json  known_marketplaces.json
.claude/shell-snapshots/: snapshot-bash-1779270071360-2rsrfo.sh
.github/workflows/: ci.yml
crates/ans-budget/: Cargo.toml
crates/ans-cdp/: Cargo.toml
crates/ans-cdp/src/: client.rs  command.rs  lib.rs
crates/ans-distill/: Cargo.toml
crates/ans-distill/benches/: distill_bench.rs
crates/ans-distill/src/: engine.rs  lib.rs  semantic.rs  serialization.rs
crates/ans-ipc/: Cargo.toml
crates/ans-ipc/src/: arrow_ipc.rs  pool.rs  server.rs  session.rs  subscriber.rs
crates/ans-stealth/: Cargo.toml
crates/ans-stealth/src/: flags.rs  humanize.rs  patches.rs  profiles.rs
docs/memory/: decision-intelligence-layer.md  implementation-phases.md  phase9-complete.md
nerves/: ANS_MCP_TOOLS.md  ans_analyse_browser_use.py  ans_pb2.py  pyproject.toml
nerves/ans_nerves/: ans_pb2.py  circuit_breaker.py  config.py
nerves/tests/: __init__.py  test_config.py  test_eyes.py  test_loop.py  test_loop_cost_optimized.py  test_planner.py
proto/: ans.proto
static/: dashboard.html
(+2620 files in other folders)
