[package]
name = "ans-cdp"
version.workspace = true
edition.workspace = true
description = "Chrome DevTools Protocol client — owns Chromium lifecycle"

[dependencies]
ans-proto.workspace = true
ans-core.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tungstenite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono.workspace = true
async-trait.workspace = true
futures-util = "0.3"
ans-distill = { path = "../ans-distill" }
ans-stealth = { path = "../ans-stealth" }

[lints]
workspace = true
