[package]
name = "ans-ipc"
version.workspace = true
edition.workspace = true
description = "gRPC server + Arrow IPC bridge — the Rust↔Python communication layer"

[dependencies]
ans-proto.workspace = true
ans-core.workspace = true
tonic.workspace = true
prost.workspace = true
tokio.workspace = true
arrow.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
ans-cdp = { path = "../ans-cdp" }
ans-stealth = { path = "../ans-stealth" }
ans-distill = { path = "../ans-distill" }
ans-diff = { path = "../ans-diff" }
ans-goal = { path = "../ans-goal" }
ans-immune = { path = "../ans-immune" }
ans-storage = { path = "../ans-storage" }
ans-budget = { path = "../ans-budget" }
ans-signal = { path = "../ans-signal" }
tokio-stream.workspace = true
socket2 = "0.5"

[lints]
workspace = true
